...
        } else {
            iconImageView.setHidden(true)
        }
        let descriptionStyle: POTextStyle
        if item.isCaptured {
            descriptionStyle = style.successMessage ?? Constants.defaultSuccessMessageStyle
            descriptionLabel.accessibilityIdentifier = "native-alternative-payment.captured.description"
        } else {
            descriptionStyle = style.message ?? Constants.defaultMessageStyle
            descriptionLabel.accessibilityIdentifier = "native-alternative-payment.non-captured.description"
        }
        descriptionLabel.attributedText = AttributedStringBuilder()
            .typography(descriptionStyle.typography)
            .textStyle(textStyle: .headline)
            .textColor(descriptionStyle.color)
            .alignment(.center)
...
