...
        view.axis = .vertical
        return view
    }()

    private lazy var primaryButton: Button = {
        let button = Button(style: style.primaryButton)
        button.accessibilityIdentifier = "native-alternative-payment.primary-button"
        return button
    }()

    private lazy var secondaryButton: Button = {
        let button = Button(style: style.secondaryButton)
        button.accessibilityIdentifier = "native-alternative-payment.secondary-button"
...
