...
    var delegate: BetaNativeAlternativePaymentMethodCellDelegate?

    // MARK: - Private Nested Types

    private enum Constants {
        static let defaultStyle = POInputFormStyle.code
        static let accessibilityIdentifier = "native-alternative-payment.code-input"
    }

    // MARK: - Private Properties

    private var codeTextField: CodeTextField! // swiftlint:disable:this implicitly_unwrapped_optional
    private var item: BetaNativeAlternativePaymentMethodViewModelState.CodeInputItem?
...
