...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2l-P9-rLA">
                                <rect key="frame" x="16" y="20" width="343" height="50"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Waiting for payment..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="re6-pE-PcH">
                                        <rect key="frame" x="88" y="15" width="168" height="21"/>
                                        <accessibility key="accessibilityConfiguration" identifier="statusLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" red="1" green="0.47492731030408297" blue="0.0" alpha="0.70436289612676062" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="188" y="208" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="testName"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="pay" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nhl-lq-tSG" userLabel="pay">
                                <rect key="frame" x="125" y="463" width="126" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="pay"/>
                                <state key="normal" title="Test 3DS payment"/>
                                <connections>
                                    <action selector="clicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ycx-3E-nsE"/>
                                </connections>
...
